[gd_scene load_steps=8 format=2]

[ext_resource path="res://experiments/Sphere.gd" type="Script" id=1]

[sub_resource type="SpatialMaterial" id=1]
albedo_color = Color( 1, 0, 0, 1 )

[sub_resource type="SpatialMaterial" id=2]
albedo_color = Color( 0, 1, 0, 1 )

[sub_resource type="SpatialMaterial" id=3]
albedo_color = Color( 0, 0, 1, 1 )

[sub_resource type="SpatialMaterial" id=4]
flags_transparent = true
albedo_color = Color( 0, 1, 0, 0.415686 )

[sub_resource type="QuadMesh" id=5]
material = SubResource( 4 )
size = Vector2( 78.47, 78.87 )

[sub_resource type="SpatialMaterial" id=6]
albedo_color = Color( 0, 0, 0, 1 )

[node name="Spatial" type="Spatial"]

[node name="Camera" type="Camera" parent="."]
transform = Transform( 0.557428, -0.158807, 0.814896, -0.0184018, 0.978931, 0.203362, -0.830022, -0.128355, 0.542761, 92.1507, 21.2227, 51.5486 )
fov = 64.0
far = 196.0

[node name="Camera2" type="Camera" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 7.62939e-06, 3.59064, 41.2275 )
fov = 121.4

[node name="Axis" type="Spatial" parent="."]

[node name="y_axis" type="CSGCylinder" parent="Axis"]
radius = 0.2
height = 80.0
material = SubResource( 1 )

[node name="x_axis" type="CSGCylinder" parent="Axis"]
transform = Transform( -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0, 1, 0, 0, 0 )
radius = 0.2
height = 80.0
material = SubResource( 2 )

[node name="z_axis" type="CSGCylinder" parent="Axis"]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0 )
radius = 0.2
height = 80.0
material = SubResource( 3 )

[node name="x_plane" type="CSGMesh" parent="Axis"]
mesh = SubResource( 5 )

[node name="Sphere" type="CSGSphere" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.106237, 2.41838, 6.47206 )
script = ExtResource( 1 )

[node name="SphereProjection" type="CSGSphere" parent="Sphere"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -6.10901 )
material = SubResource( 6 )

[node name="Tween" type="Tween" parent="Sphere"]

[node name="Center" type="Position3D" parent="Sphere"]

[node name="Radius" type="Position3D" parent="Sphere"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.994175, 0 )
[connection signal="tween_completed" from="Sphere/Tween" to="Sphere" method="_on_Tween_tween_completed"]
[connection signal="tween_step" from="Sphere/Tween" to="Sphere" method="_on_Tween_tween_step"]
